...
                            AirportRow(value: value)
                        }
                    }
                }
            }
            .listStyle(.insetGrouped)
            .accessibilityIdentifier("originTable")
            PropertyNavigationItem(value: $claim.origin, destination: FlightDestinationView())
        }
        .onAppear {
            searchText = ""
            searching = false
            
...
