...
                                claim.flight = value
                            }
                    }
                }
            }
            .listStyle(.insetGrouped)
            .accessibilityIdentifier("flightTable")
            PropertyNavigationItem(value: $claim.flight, destination: PassengerDataView())
        }
        .onAppear {
            Task {
                do {
                    flights = try await services.flight.findBy(departureCode: claim.origin?.code ?? "",
...
